# seekfs

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  mise.toml  seekfs.toml
crates/seekfs-bench/: Cargo.toml
crates/seekfs-bench/src/: main.rs
crates/seekfs-core/: Cargo.toml
crates/seekfs-core/src/: l2.rs  layout.rs  lib.rs  manifest.rs  store.rs  types.rs
crates/seekfs-daemon/: Cargo.toml
crates/seekfs-daemon/src/: main.rs  manifest.rs
crates/seekfs-fuse/: Cargo.toml
crates/seekfs-fuse/src/: lib.rs
crates/seekfs-l2/: Cargo.toml
crates/seekfs-l2/src/: lib.rs
crates/seekfs-proto/: Cargo.toml
crates/seekfs-proto/src/: lib.rs
crates/seekfs-tools/: Cargo.toml
crates/seekfs-tools/src/: main.rs
deploy/kind/: kind-cluster.yaml
deploy/minio/: values-ephemeral.yaml  values-pv.yaml
docs/: CRT.md  SPEC.md  TERMINOLOGY.md  WORKLOG.md
