[package]
name = "seekfs-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Core types and traits for seekfs: manifests, cache keys, and L2 trait"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tracing = "0.1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }

[features]
default = ["sdk"]
sdk = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-runtime", "dep:aws-smithy-experimental"]
crt = ["dep:mountpoint-s3-client"]

[dependencies.aws-config]
version = "1.8"
features = ["behavior-version-latest"]
optional = true

[dependencies.aws-sdk-s3]
version = "1.106"
optional = true

[dependencies.aws-smithy-runtime]
version = "1.9"
features = ["client"]
optional = true

[dependencies.aws-smithy-experimental]
version = "0.1"
features = ["crypto-aws-lc"]
optional = true

[dependencies.mountpoint-s3-client]
version = "0.19"
optional = true
